<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/optionsedit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/iconsize"
            android:layout_height="@dimen/iconsize"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            app:tint="@color/color2"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toLeftOf="@id/imageView5"
            android:layout_toRightOf="@id/imageView2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/edittitle"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:text="@string/editdescript"
                android:textColor="@color/black"
                android:textSize="@dimen/edittitle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/iconsize"
            android:layout_height="@dimen/iconsize"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            app:tint="@color/color1"
            app:srcCompat="@drawable/checkicn" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionsedit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topmargin"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/customtitle"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topmargin1"
                android:fontFamily="@font/robotoregular"
                android:text="@string/customdescript" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittextmargin"
                android:backgroundTint="@color/color1"
                android:ems="10"
                android:hint="@string/hintname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittextmargin"
                android:backgroundTint="@color/color1"
                android:ems="10"
                android:hint="@string/hinusername"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittextmargin"
                android:backgroundTint="@color/color1"
                android:ems="10"
                android:hint="@string/hindescript"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>