<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/optionsfavorite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/iconsize1"
            android:layout_height="@dimen/iconsize1"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            app:tint="@color/color2"
            app:srcCompat="@drawable/abc_vector_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@id/imageView8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:text="@string/favcharactertitle"
                android:textColor="@color/black"
                android:textSize="@dimen/favtitle" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionsfavorite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/favcharacter1"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular"
                android:text="@string/favdescript1" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/black" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewheight"
                android:layout_marginTop="@dimen/viewmargin"
                android:layout_marginBottom="@dimen/viewmargin"
                android:background="@color/md_grey_100" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivRICK"
                android:layout_width="@dimen/imagecharacter"
                android:layout_height="@dimen/imagecharacter"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotomedium"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/namecharactersize" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bigmargintop"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/episodes"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/black"
                android:textSize="@dimen/resultsizefav" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bigmargintop"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/location1"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/black"
                android:textSize="@dimen/resultsizefav" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bigmargintop"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/spice"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/black"
                android:textSize="@dimen/resultsizefav" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bigmargintop"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/gender"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/black"
                android:textSize="@dimen/resultsizefav" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bigmargintop"
                android:background="@color/coloripple"
                android:fontFamily="@font/robotomedium"
                android:text="@string/state"
                android:textColor="@color/color1" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginsmall"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/black"
                android:textSize="@dimen/resultsizefav" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>